# Renderer

./: ARCHITECTURE.md  CMakeLists.txt  README.md  TODO.md  debug.md
assets/azura/: azura.scn
assets/centaur/: centaur.scn
assets/craftsman/: craftsman.scn
assets/elfgirl/: elfgirl.scn
assets/kgirl/: kgirl.scn
assets/lighthouse/: lighthouse.scn
assets/mccree/: mccree.scn
assets/nier2b/: nier2b.scn
assets/phoenix/: phoenix.scn
assets/vivi/: vivi.scn
assets/whip/: whip.scn
assets/witch/: witch.scn
docs/: Geometry.md  refactor_application.md  ui_integration_guide.md
include/app/: application.hpp  frame_timer.hpp  input_manager.hpp
include/core/: application.hpp  framebuffer.hpp  graphics.hpp  image.hpp  rasterizer.hpp  scene.hpp  scene_creator.hpp
include/geometry/: camera.hpp  mesh.hpp  model.hpp  skeleton.hpp
include/math/: math.hpp
include/platform/: window.hpp  window_adapter.hpp
include/shading/: Blinn_shader.hpp  light.hpp  shader.hpp  skybox_shader.hpp  texture.hpp
include/utils/: OBJ_Loader.h  global.hpp  resource_cache.hpp
src/: main.cpp
src/app/: application.cpp  frame_timer.cpp  input_manager.cpp
src/core/: application.cpp  framebuffer.cpp  graphics.cpp  image.cpp  rasterizer.cpp  scene.cpp  scene_creator.cpp
src/geometry/: camera.cpp  mesh.cpp  model.cpp  skeleton.cpp
src/math/: math.cpp
src/platform/: window.cpp
src/shading/: Blinn_shader.cpp  skybox_shader.cpp  texture.cpp
